# brinsfield2013

./: README.ja.md  README.md  pyproject.toml
docs/: architecture.ja.md  architecture.md  cli.ja.md  cli.md  reproduction.ja.md  reproduction.md  usecases.ja.md  usecases.md  visualization.ja.md  visualization.md
simulation/: Cargo.toml
simulation/src/: calibration.rs  config.rs  lib.rs  llm.rs  main.rs  mechanisms.rs  metrics.rs  motives.rs  prompts.rs  simulation.rs  world.rs
simulation/tests/: integration_test.rs
tools/: pyproject.toml
tools/src/brinsfield_tools/: __init__.py  _track_a_common.py  cfa.py  cli.py  reproduce_paper.py  show_experiment_settings.py  survey_loader.py  visualize.py  visualize_sweep.py
