[project]
name = "brinsfield-tools"
version = "0.1.0"
description = "Brinsfield (2013) six-motive employee silence — visualization, CFA, and reproduction tools"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "socsim-tools",
    # Psychometric tooling for the Track A CFA path. Available without real
    # survey data via the survey-loader `--synthesize-n` calibrated synth path.
    "factor-analyzer>=0.5",
    "semopy>=2.3",
    "scipy>=1.11",
]

[project.scripts]
brinsfield-tools = "brinsfield_tools.cli:main"

[tool.uv.sources]
socsim-tools = { git = "https://github.com/akitenkrad/rs-social-simulation-tools", subdirectory = "tools/socsim_tools" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brinsfield_tools"]
